--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -171,7 +171,8 @@ h1 {
 	text-align: center;
 }
 
-.article > .titlepage h1.title {
+.article > .titlepage h1.title,
+.article > .titlepage h2.title {
 	text-align: center;
 }
 
