--- a/publican/datadir/Common_Content/common/en-US/css/pdf.css
+++ b/publican/datadir/Common_Content/common/en-US/css/pdf.css
@@ -1,8 +1,3 @@
-
-@import url("common.css");
-@import url("overrides.css");
-@import url("lang.css");
-
 /* Cover Page styles */
 
 html {
@@ -12,11 +7,12 @@ html {
 body.cover {
 	height: 100%;
 	background-color: white;
-/*	margin-left: 10em;
-	margin-right: 10em;
-*/	padding: 0px;
+	padding: 0px;
 	font-family: "overpass", sans-serif;
 	font-weight:300;
+	font-size: 14px;
+	margin: 0 auto;
+	max-width: 770px;
 }
 
 body.cover > div {
