change logo, legalnotice, documentation URL

--- a/publican-jboss/en-US/css/menu.css
+++ b/publican-jboss/en-US/css/menu.css
@@ -11,7 +11,6 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 div.producttitle {
-/*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
 	color:#a70000;
 }
 
@@ -19,7 +18,9 @@ div.producttitle {
 	color:#a70000;
 }
 
-
+.formalpara div.title {
+     color:#a70000;
+}
 
 table {
 	border:1px solid #aaa;
