--- a/publican-jboss/en-US/css/overrides.css
+++ b/publican-jboss/en-US/css/overrides.css
@@ -13,14 +13,15 @@ h1,h2,h3,h4,h5,h6 {
 div.producttitle {
 /*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
 	color:#a70000;
-	font-size:2.0em;
 }
 
 .section h1.title {
 	color:#a70000;
 }
 
-
+.formalpara div.title {
+     color:#a70000;
+}
 
 table {
 	border:1px solid #aaa;
