Stop menu bouncing. BZ #953716

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -1121,6 +1121,8 @@ dl {
 
 .toc dl {
 	margin-left: 10px;
+	padding-left: 2em;
+	text-indent: -2em;
 }
 
 /*index*/
@@ -1308,13 +1310,13 @@ pre {
 span.remark {
 	background-color: #ff00ff;
 }
-
+/*
 .draft {
 	background-image: url(../images/watermark-draft.png);
 	background-repeat: repeat-y;
         background-position: center;
 }
-
+*/
 .foreignphrase {
 	font-style: inherit;
 }
@@ -1349,7 +1351,6 @@ dl:after {
 .toc dd {
 	padding-bottom: 0px;
 	margin-bottom: 1em;
-	padding-left: 1.3em;
 	margin-left: 0px;
 }
 
