Apply title style patch from Jaromir Hradilek. BZ #924518

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -182,6 +182,7 @@ h1 {
 
 .part > .titlepage h1.title {
 	text-align: center;
+	font-size: 24px;
 }
 
 div.producttitle {
@@ -226,13 +227,18 @@ div.subtitle {
        font-weight: bold;
 }
 
-.preface > div > div > div > h2.title {
+h1.legalnotice {
+	font-size: 24px;
+}
+
+.preface > div > div > div > h2.title,
+.preface > div > div > div > h1.title {
 	margin-top: 1em;
-	font-size: 18px;
+	font-size: 24px;
 }
 
 .appendix h2 {
-	font-size: 18px;
+	font-size: 24px;
 }
 
 
@@ -261,7 +267,23 @@ h6 {
 .abstract h6 {
 	margin-top:1em;
 	margin-bottom:.5em;
-	font-size: 22px;
+	font-size: 24px;
+}
+
+.index > div > div > div > h2.title {
+	font-size: 24px;
+}
+
+.chapter > div > div > div > h2.title {
+	font-size: 24px;
+}
+
+.section > div > div > div > h2.title {
+	font-size: 21px;
+}
+
+.section > div > div > div > h3.title {
+	font-size: 17px;
 }
 
 /*element rules*/
