--- a/publican/datadir/Common_Content/common/en-US/css/pdf.css
+++ b/publican/datadir/Common_Content/common/en-US/css/pdf.css
@@ -54,7 +54,8 @@ body.cover div.version {
 body.cover div.docname {
 	font-size: 40px;
 	font-weight: 600;
-	height: 10%;
+	min-height: 10%;
+	line-height: 40px;
 }
 
 body.cover div.subtitle {
@@ -64,6 +65,7 @@ body.cover div.subtitle {
 	color: black;
 	border-top: .1em solid black;
 	padding-top: 40px;
+	margin-top: 40px;
 }
 body.cover div.authors {
 }
