Add wkhtmltopdf_opts parameter to pass options to wkhtmltopdf. BZ #951290

--- a/publican/datadir/Common_Content/common/en-US/css/pdf.css
+++ b/publican/datadir/Common_Content/common/en-US/css/pdf.css
@@ -12,7 +12,7 @@ body.cover {
 	font-weight:300;
 	font-size: 14px;
 	margin: 0 auto;
-	max-width: 770px;
+	max-width: 100%;
 }
 
 body.cover > div {
