--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1223,12 +1223,19 @@ sup {
 }
 
 .footnote sup  {
-	color:#e3dcc0;
+	color: black;
 	left: .4em;
 }
 
+.footnote a:link,
+.footnote a:visited {
+	text-decoration:none;
+	border: none;
+}
+
 .footnote .para sup  {
-	position:absolute;
+/*	position:absolute; */
+	vertical-align:text-bottom;
 }
 
 a.footnote {
@@ -1248,7 +1255,7 @@ a.footnote {
 }
 
 .footnote p,.footnote div.para {
-	padding-left:2em;
+	padding-left:1em;
 }
 
 .footnote a:link, 
