add fmove and tweak web style

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -618,6 +618,7 @@ body[dir="rtl"] > #wrapper {
 	color: #999999 !important;
 	font-size: 30px;
 	text-decoration: none;
+	top: 0px !important;
 }
 .bottom_products > .title a:hover {
 	color: #333333 !important;
