Rebased publican-redhat-db5 from publican-redhat 3.1-1.
Updated publican-redhat-db5 to pick up recent changes to the standard
publican-redhat brand. In particular an updated legal notice and program
listing example.

--- a/publican-redhat-db5/en-US/css/overrides.css
+++ b/publican-redhat-db5/en-US/css/overrides.css
@@ -15,6 +15,10 @@ div.producttitle {
 	color:#a70000;
 }
 
+.formalpara div.title {
+    color:#a70000;
+}
+
 .section h1.title {
 	color:#a70000;
 }
@@ -55,6 +59,9 @@ span.remark{
 	background-color: #ffff00;
 }
 
+.docnav.top li.home {
+    color:#a70000;
+}
 div.author {
 	text-align: center;
 }
