Fix Titles that are ulinks are incorrectly positioned. BZ #995095

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -1770,7 +1770,7 @@ top: 32px !important;
 	right:2em;
 }
 
-.title a {
+.title a:first-child {
         position: relative !important;
         top: -32px !important;
 }
